style has been changed - Containers are highlighted - Added additional "wrap" classes - Fixed a bug in posts where the line was in front of navbar - Other changes

--- a/main_page/static/style/style.css
+++ b/main_page/static/style/style.css
@@ -2,21 +2,51 @@ body{
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #ccc;
 }
 
 main{
     margin-top: 108px;
 }
 
-.wrap{
+.wrap_navbar{
     max-width: 1250px;
     margin: 0 auto;
     padding: 10px 30px;
     box-sizing: border-box;
 }
 
+.wrap{
+    max-width: 80%;
+    margin: 0 auto;
+    padding: 10px 30px;
+    box-sizing: border-box;
+    background-color: #fff;
+    border-radius: 7px;
+}
+
+.wrap_post{
+    max-width: 80%;
+    margin: 0 auto;
+    box-sizing: border-box;
+    background-color: #fff;
+    border-radius: 7px;
+}
+
+.wrap_text{
+    padding: 10px 30px;
+}
+
+.wrap_text h1{
+    font-size: 30px;
+    text-align: center;
+    max-width: 80%;
+    margin: 20px auto;
+}
+
 .menu{
     position: fixed;
+    z-index: 999;
     width: 100%;
     top: 0px;
     background: #ffffff;
@@ -74,6 +104,9 @@ a{
         font-size: 8px;
         padding: 5px 10px;
     }
+    .wrap{
+        max-width: 95%;
+    }
   }
 
 .content .wrap{
@@ -96,8 +129,8 @@ h1, h2, h4{
     text-align: left;
 }
 
-.main_sect{
-    margin: 50px auto;
+.main_sect, h2{
+    text-align: center;
 }
 
 .post_sect{
@@ -234,11 +267,16 @@ font-size: 16px;
 color: #00000080;
 }
 
-.post{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-    align-items: center;
+.date_source span{
+    color: #000000;
+}
+
+.date_source span:visited{
+    color: #00000080;
+}
+
+.date_source span:hover{
+    color: #00000080;
 }
 
 .post p{
@@ -254,14 +292,15 @@ color: #00000080;
 
 .line_parent{
     position: relative;
-    margin-top: -20px;
+    z-index: 0;
+    margin-top: -30px;
     margin-bottom: 30px;
     height: 80px;
     width: 100%;
 }
 
-.mt30{
-    margin-top: 30px; 
+.mt90{
+    margin-top: 90px; 
 }
 
 .line{
@@ -311,4 +350,24 @@ color: #00000080;
     flex-direction: column;
     box-sizing: border-box;
     margin: 10px;
+}
+
+.city_post{
+    max-width: 1250px;
+    margin: 0 auto;
+    padding: 10px 30px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.city_post p{
+    font-size: 20px;
+    text-align: center;
+}
+
+.city_post p img{
+    width: 100%;
+    margin-bottom: 10px;
 }
